# open-ledger

./: .dockerignore  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  env.template  pyproject.toml  settings.conf
.docs/: open-ledger-examples.md  open-ledger-full-spec.md  open-ledger-regulatory-layer.md
.docs/ptbr/: open-ledger-full-spec-ptbr.md
.github/workflows/: pull_request.yml
migration/: env.py
migration/versions/: 2026_0421_0000-a1b2c3d4e5f6_receivables.py  2026_04_19_0058-7689a062042c_entities.py  2026_04_19_1114-f0e0b682daf3_chart_of_accounts.py  2026_04_19_1200-3b5d7e9c1f0a_accounting_periods.py  2026_04_20_1433-5d2821f9e0cc_transactions_and_entries.py
src/: api.py
src/config/: database.py
src/exceptions/: __init__.py  account.py  period.py  receivable.py  transaction.py
src/model/: __init__.py  accounting_period.py  base_model.py  chart_of_accounts.py  entity.py  receivable.py  transaction.py  transaction_entry.py
src/model/constants/: account_codes.py
src/repositories/: account.py  base.py  period.py  receivable.py  transaction.py
src/routes/: entities.py  periods.py  receivables.py  transactions.py
src/services/: account.py  entity.py  errors.py  period.py  receivable.py  templates.py  transaction.py
tests/: conftest.py
tests/it/: conftest.py  test_accounts.py  test_database.py  test_entities.py  test_periods.py  test_receivables.py  test_transaction_lifecycle.py  test_transaction_service.py  test_transactions.py
(+21 files in other folders)
